...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
...
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/eTNewElement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/eT_new_element"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:tooltipText="New element name" />

        <ImageView
            android:id="@+id/iVNewElementTop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:tooltipText="Add new element on top"
            app:srcCompat="@drawable/up_arrow"
            app:tint="?attr/colorControlNormal" />

        <ImageView
            android:id="@+id/iVNewElementBottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:tooltipText="Add new element on bottom"
            app:srcCompat="@drawable/down_arrow"
            app:tint="?attr/colorControlNormal" />
...
