...
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/edit_element_title"
            android:textSize="26sp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="?attr/colorOnPrimary"
            app:backgroundTint="@color/design_default_color_error" />

        <Button
            android:id="@+id/btnApplyChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_changes"
            android:textColor="?attr/colorOnPrimary"
            app:backgroundTint="@color/design_default_color_primary" />

        <EditText
            android:id="@+id/eTName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_element_name"
            android:inputType="text"
            android:minHeight="48dp" />
...
