...
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:id="@+id/hLayoutMain">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:focusable="false"
...
                        android:layout_height="40dp"
                        android:layout_weight="3"
                        android:paddingLeft="0dp"
                        android:paddingTop="0dp"
                        android:paddingRight="0dp"
                        android:paddingBottom="0dp"
                        android:text="Top" />

                    <Button
                        android:id="@+id/btnJumpBottom"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_weight="3"
                        android:paddingLeft="0dp"
                        android:paddingTop="0dp"
                        android:paddingRight="0dp"
                        android:paddingBottom="0dp"
                        android:text="Bottom" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <View
...
